--- a/.env
+++ b/.env
@@ -29,6 +29,6 @@ APP_SECRET=ed20bc52954b15b1cc86838859668a7c
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL=mysql://root:@127.0.0.1:3306/dbfinal?serverVersion=mariadb-10.5.5
+DATABASE_URL=mysql://root:@127.0.0.1:3306/bdfinal?serverVersion=mariadb-10.5.5
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
