--- a/.env
+++ b/.env
@@ -32,3 +32,13 @@ APP_SECRET=83aa8ee7ac5fafc060007e9d8fd0c4e2
 DATABASE_URL="mysql://root:@127.0.0.1:3306/bdfinal?serverVersion=mariadb-10.4.11"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/sendgrid-mailer ###
+# MAILER_DSN=sendgrid://KEY@default
+###< symfony/sendgrid-mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+MAILER_DSN=gmail://noreplysahti@gmail.com:rwtlwppcxycwhwfa@default
+###< symfony/google-mailer ###
