--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "doctrine/doctrine-bundle": "^2.6",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "dompdf/dompdf": "^1.2",
         "knplabs/knp-paginator-bundle": "^5.8",
         "mercuryseries/flashy": "^1.0",
         "mercuryseries/flashy-bundle": "^5.1",
