--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "doctrine/doctrine-bundle": "^2.6",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "dompdf/dompdf": "^1.2",
         "knplabs/knp-paginator-bundle": "^5.8",
         "mercuryseries/flashy-bundle": "3.0",
         "phpdocumentor/reflection-docblock": "^5.3",
@@ -36,7 +37,7 @@
         "symfony/twig-bundle": "4.4.*",
         "symfony/validator": "4.4.*",
         "symfony/web-link": "4.4.*",
-        "symfony/web-server-bundle": "^4.4",
+        "symfony/web-server-bundle": "4.4.*",
         "symfony/yaml": "4.4.*",
         "twig/cssinliner-extra": "^3.3",
         "twig/extra-bundle": "^3.3",
