--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "symfony/swiftmailer-bundle": "^3.5",
         "symfony/translation": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
+        "symfony/ux-chartjs": "^2.1",
         "symfony/validator": "4.4.*",
         "symfony/web-link": "4.4.*",
         "symfony/web-server-bundle": "4.4.*",
