--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "dompdf/dompdf": "^1.2",
         "knplabs/knp-paginator-bundle": "^5.8",
         "mercuryseries/flashy-bundle": "3.0",
+        "messagebird/php-rest-api": "^3.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "4.4.*",
