--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "symfony/ux-chartjs": "^2.1",
         "symfony/validator": "4.4.*",
         "symfony/web-link": "4.4.*",
-        "symfony/web-server-bundle": "4.4.*",
+        "symfony/web-server-bundle": "^4.4",
         "symfony/yaml": "4.4.*",
         "twig/cssinliner-extra": "^3.3",
         "twig/extra-bundle": "^3.3",
